--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 # VITE_API_URL=http://localhost:3000
 
 # Example for deployed backend:
-# VITE_API_URL=https://your-backend.example.com
+VITE_API_URL=https://heartlog.onrender.com
