--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --port 5000 --host",
     "build": "vite build",
-    "start": "NODE_ENV=production node dist/index.js",
+    "preview": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
